fixing an issue with select element in search bar, text was covering an arrow at tablet devices

--- a/src/components/Header/SearchBar/SearchBar.module.scss
+++ b/src/components/Header/SearchBar/SearchBar.module.scss
@@ -42,5 +42,9 @@ margin-top: 1rem;
         &__input {
            width: 100%;
         }
+
+        &__select {
+            width: 350px;
+        }
     }
 }
